# raw2gimi

./: .gitmodules  .prettierignore  CMakeLists.txt  README.md
src/: csv_file.cpp  csv_file.h  csv_reader.cpp  csv_reader.h  decoder.h  deocder.cpp  error_handler.cpp  error_handler.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  gimifier.cpp  gimifier.h  image_factory.cpp  image_factory.h  image_processor.cpp  image_processor.h  main.cpp  main_args.cpp  main_args.h  main_args_generator.cpp  main_args_generator.h  options.cpp  options.h  raw2gimi.cpp  raw2gimi.h  rdf_converter.cpp  rdf_converter.h  sample_file_generator.cpp  sample_file_generator.h
src/builders/: main_args_builder.cpp  main_args_builder.h  raw_image_builder.h
src/dependencies/: lat_lon_interpolator.cpp  lat_lon_interpolator.h  libheif.cpp  libheif.h  libheif_adapter.cpp  libheif_adapter.h  libheif_wrapper.cpp  libheif_wrapper.h  redland_wrapper.cpp  redland_wrapper.h  stb_image_wrapper.cpp  stb_image_wrapper.h
src/interfaces/: image_writer_interface.h
src/model/: band.cpp  band.h  bounding_box.cpp  bounding_box.h  coordinate.cpp  coordinate.h  corner_points.cpp  corner_points.h  correspondence.cpp  correspondence.h  correspondence_group.cpp  correspondence_group.h  image.cpp  image.h  image_coordiante.cpp  image_coordinate.h  infe_item.cpp  infe_item.h  iri.h  iso_file.cpp  iso_file.h  meta_box.cpp  meta_box.h  pixel_formats.cpp  pixel_formats.h  plane.cpp  plane.h  point.cpp  point.h  raw_image.cpp  raw_image.h  raw_image_grid.cpp  raw_image_grid.h  rdf_literal.cpp  rdf_literal.h  resource.cpp  resource.h  timestamp.cpp  timestamp.h  write_options.cpp  (+1 more)
